--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
     dataBinding{
         enabled true
@@ -39,10 +39,10 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.local.wifi"
+        applicationId "com.losman.wifiremotecontrol"
         minSdkVersion 21
-        targetSdkVersion 29
-        versionCode 1
+        targetSdkVersion 30
+        versionCode 5
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -86,6 +86,9 @@ dependencies {
     implementation 'com.google.dagger:dagger-android:2.37'
     kapt "com.google.dagger:dagger-compiler:2.37"
 
+
+//    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'io.github.muddz:styleabletoast:2.4.0'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation("io.reactivex.rxjava2:rxkotlin:2.2.0") {
